--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Atalan</title>
-	<link href="https://fonts.googleapis.com/css?family=Montserrat:400,800&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css">
+	  <link rel="stylesheet" href="http://cdn.jsdelivr.net/chartist.js/latest/chartist.min.css">
+    <script src="http://cdn.jsdelivr.net/chartist.js/latest/chartist.min.js"></script>
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -15,7 +15,22 @@
 		<div class="three-blocks">
 			<div class="left-block">
 				<div class="top-left-block">
-					
+					<div class="ct-chart ct-perfect-fourth"></div>
+					<script>
+						var data = {
+						  // A labels array that can contain any sort of values
+						  labels: ['Mon', 'Tue', 'Wed', 'Thu', 'Fri'],
+						  // Our series array that contains series objects or in this case series data arrays
+						  series: [
+						    [5, 2, 4, 2, 0]
+						  ]
+						};
+
+						// Create a new line chart object where as first parameter we pass in a selector
+						// that is resolving to our chart container element. The Second parameter
+						// is the actual data object.
+						new Chartist.Line('.ct-chart', data);
+					</script>
 				</div>
 				<div class="bottom-left-block">
 					
