--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<!-- <link rel="stylesheet" href="http://cdn.jsdelivr.net/chartist.js/latest/chartist.min.css">
+	<link rel="stylesheet" href="http://cdn.jsdelivr.net/chartist.js/latest/chartist.min.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css">
-	    <script src="http://cdn.jsdelivr.net/chartist.js/latest/chartist.min.js"></script> -->
+	    <script src="http://cdn.jsdelivr.net/chartist.js/latest/chartist.min.js"></script>
 	<link rel="stylesheet" href="css/style.css">
 	<title>Atalan</title>
 </head>
@@ -34,7 +34,7 @@
 			<div class="block-left">		
 				<div class="top-left-block"><p>top-left-block</p>
 					<div class="ct-chart ct-perfect-fourth"></div>
-					<!-- <script>
+					<script>
 						var data = {
 						  // A labels array that can contain any sort of values
 						  labels: ['Mon', 'Tue', 'Wed', 'Thu', 'Fri'],
@@ -56,7 +56,7 @@
 						  low: 0,
 						  showArea: true
 						});
-					</script> -->
+					</script>
 				</div>
 				<div class="bottom-left-block"><p>bottom-left-block</p>				
 				</div>
