--- a/index.html
+++ b/index.html
@@ -2,155 +2,143 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css">
 	<link rel="stylesheet" href="http://cdn.jsdelivr.net/chartist.js/latest/chartist.min.css">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css">
-	<link rel="stylesheet" type="text/css" href="http://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
+	<link rel="stylesheet" href="http://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
 	<link rel="stylesheet" href="css/style.css">
 	<title>Atalan</title>
 </head>
 <body>
-	<div class="wrapper">
-		<div class="header">
-			<div class="triangles"><p>Logo</p>
-			</div>
-			<div class="search-box"><p>search</p>
-			</div>
-			<div class="header-menu">
-	            <ul>
-	                <li><a href="#" class="btn">Dashboard</a></li>
-	                <li><a href="#" class="btn">Transfers</a></li>
-	                <li><a href="#" class="btn">Payments</a></li>
-	                <li><a href="#" class="btn">Recent Transactions</a></li>
-	                <li><a href="#" class="btn">Loan</a></li>
-	                <li><a href="#" class="btn">Online Support</a></li>
-	            </ul>
-	        </div>
-	        <div class="photo-name">
-	        	<img src="" alt="">
-	        	<p>Ertugrul Cevahir</p>
-	        </div>
+<div class="wrapper">
+	<div class="header">
+		<div class="triangles"><p>Logo</p>
 		</div>
-		<div class="three-blocks">
-			<div class="block-left">		
-				<div class="top-left-block">
-					<div class="top-left-block-head">
-						<p>Balance</p>					
-					  	<ul id="tabs-chart">
-					      <li><a id="tab1" class="active">TL</a></li>
-					      <li><a id="tab2">EURO</a></li>
-					      <li><a id="tab3">USD</a></li>
-						</ul>	
-					</div>					
-					<div class="ct-chart ct-perfect-fourth"></div>
-					
-				</div>
-				<div class="bottom-left-block">
-					<div class="bottom-left-block-head">
-						<p>Balance</p>					
-					  	<ul id="tabs-chart">
-					      <li><a id="tab1" class="active">TL</a></li>
-					      <li><a id="tab2">EURO</a></li>
-					      <li><a id="tab3">USD</a></li>
-						</ul>	
-					</div>									
-				</div>
-			</div>
-			<div class="block-center">
-				<div class="top-center-block">
-					<div class="top-center-block-head">Credit Cards</div>
-					<div class="slider">
-						  <div class="slide"></div>
-						  <div class="slide"></div>
-						  <div class="slide"></div>
-					</div>
-					<div class="slide-title">		
-						  <p>lorem 1</p>
-						  <p>lorem 2</p>
-						  <p>lorem 3</p>
-					</div>
-				</div>
-				<div class="bottom-center-block">
-					<div class="s-block1"><p>send</p></div>
-					<div class="s-block2"><p>send</p></div>
-					<div class="s-block3"><p>send</p></div>
-				</div>
-			</div>
-			<div class="block-right">
-				<div class="top-right-block">
-					<p>Recurrring Payments</p>
-				</div>
-				<div class="bottom-right-block">
-					<p>Recent Transactions</p>
-				</div>
-			</div>	
-		</div>	
-		<!-- <div class="footer"></div> -->	
+		<div class="search-box"><p>search</p>
+		</div>
+		<div class="header-menu">
+			<ul>
+				<li><a href="#" class="btn">Dashboard</a></li>
+				<li><a href="#" class="btn">Transfers</a></li>
+				<li><a href="#" class="btn">Payments</a></li>
+				<li><a href="#" class="btn">Recent Transactions</a></li>
+				<li><a href="#" class="btn">Loan</a></li>
+				<li><a href="#" class="btn">Online Support</a></li>
+			</ul>
+		</div>
+		<div class="photo-name">
+			<img src="" alt="">
+			<p>Ertugrul Cevahir</p>
+		</div>
 	</div>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-	<script src="http://cdn.jsdelivr.net/chartist.js/latest/chartist.min.js"></script>
-	<script type="text/javascript" src="http://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-	<script>
-// CHART
-		var data = {
-		  // A labels array that can contain any sort of values
-		  labels: [1, 2, 3, 4, 5, 6],
-		  // Our series array that contains series objects or in this case series data arrays
-		  series: [
-		    [5, 2, 8, 7, 3, 5]
-		  ]
-		};
-	
-		// Create a new line chart object where as first parameter we pass in a selector
-		// that is resolving to our chart container element. The Second parameter
-		// is the actual data object.
-		var chart = new Chartist.Line('.ct-chart', {
-			  labels: ['Mon', 'Tue', 'Wed', 'Thu', 'Fri', 'Sat'],
-			  series: [
-			    [1, 5, 2, 5, 4, 3],
-			    [2, 3, 4, 8, 1, 2],
-			    [5, 4, 3, 2, 1, 0.5]
-			  ]
-			}, {
-			  low: 0,
-			  showArea: true,
-			  showPoint: false,
-			  fullWidth: true
-			});
-
-			chart.on('draw', function(data) {
-			  if(data.type === 'line' || data.type === 'area') {
-			    data.element.animate({
-			      d: {
-			        begin: 2000 * data.index,
-			        dur: 2000,
-			        from: data.path.clone().scale(1, 0).translate(0, data.chartRect.height()).stringify(),
-			        to: data.path.clone().stringify(),
-			        easing: Chartist.Svg.Easing.easeOutQuint
-			      }
-			    });
-			  }
-			});
-// CHART END
-
-// SLIDER
-$('.slider').slick({
-	asNavFor: '.slide-title',
-	centerMode: true,
-	centerPadding: '40px',
-	slidesToShow: 1,
-	arrows: false,
-});
-
-$('.slide-title').slick({
-	asNavFor: '.slider',
-	draggable: false,
-    centerPadding: '0px',
-    slidesToShow: 1,
-    prevArrow: '<i class="fas fa-chevron-left"></i>',
-    nextArrow: '<i class="fas fa-chevron-right"></i>',speed: 200,
-    fade: true,
-});
-// SLIDER END
-	</script>
+	<div class="three-blocks">
+		<div class="block-left">
+			<div class="top-left-block">
+				<div class="top-left-block-head">
+					<p>Balance</p>
+					<ul id="tabs-chart">
+						<li><a class="active">TL</a></li>
+						<li><a>EURO</a></li>
+						<li><a>USD</a></li>
+					</ul>
+				</div>
+				<div class="chart">
+					<svg viewbox="0 0 0 0" style="height:0; width: 0;">
+						<defs>
+							<linearGradient id="gradient-a" x2="0%" y2="100%">
+								<stop offset="0%" stop-color="#6591F9" />
+								<stop offset="100%" stop-color="#531DAB" />
+							</linearGradient>
+						</defs>
+					</svg>
+					<div class="ct-chart ct-perfect-fourth">
+					</div>
+					<div id="tooltip"></div>
+				</div>
+			</div>
+			<div class="bottom-left-block">
+				<div class="title">
+					<p>Loan Calculator</p>
+				</div>
+				<ul id="tabs">
+					<li><a id="tab1" class="active">test1</a></li>
+					<li><a id="tab2">test2</a></li>
+					<li><a id="tab3">test3</a></li>
+					<li><a id="tab4">test4</a></li>
+				</ul>
+				<!--<div class="container" id="tab1C">1Some content</div>--><!-- <=== было так-->
+				<!-- стало такж: -->
+				<div class="container" id="tab1C">
+					<div class="input-block">
+						<div class="loan-block">
+							<label for="">loan Amount</label>
+							<input type="text">
+							<input type="range" min="0" max="10" step="1">
+						</div>
+						<div class="term-block">
+							<label for="">Term</label>
+							<input type="text">
+							<input type="range" min="0" max="10" step="1">
+						</div>
+						<div class="amount-block">
+							<label for="">Installment Amount</label>
+							<input type="text">
+							<input type="range" min="0" max="10" step="1">
+						</div>
+					</div>
+					<div class="output-block">
+						<div class="output-elem">
+							<div class="label">flate</div>
+							<div class="value">1,55%</div>
+						</div>
+						<div class="output-elem">
+							<div class="label">Total</div>
+							<div class="value">608</div>
+						</div>
+						<div class="output-elem">
+							<div class="label">payback</div>
+							<div class="value">150000</div>
+						</div>
+					</div>
+				</div>
+				<div class="container" id="tab2C">2Some content</div>
+				<div class="container" id="tab3C">3Some content</div>
+				<div class="container" id="tab4C">4Some content</div>
+			</div>
+		</div>
+		<div class="block-center">
+			<div class="top-center-block">
+				<div class="top-center-block-head">Credit Cards</div>
+				<div class="slider">
+					<div class="slide"></div>
+					<div class="slide"></div>
+					<div class="slide"></div>
+				</div>
+				<div class="slide-title">
+					<p>lorem 1</p>
+					<p>lorem 2</p>
+					<p>lorem 3</p>
+				</div>
+			</div>
+			<div class="bottom-center-block">
+				<div class="s-block1"><p>send</p></div>
+				<div class="s-block2"><p>send</p></div>
+				<div class="s-block3"><p>send</p></div>
+			</div>
+		</div>
+		<div class="block-right">
+			<div class="top-right-block">
+				<p>Recurrring Payments</p>
+			</div>
+			<div class="bottom-right-block">
+				<p>Recent Transactions</p>
+			</div>
+		</div>
+	</div>
+	<!-- <div class="footer"></div> -->
+</div>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+<script src="http://cdn.jsdelivr.net/chartist.js/latest/chartist.min.js"></script>
+<script type="text/javascript" src="http://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+<script src="main.js"></script>
 </body>
 </html>
