--- a/index.html
+++ b/index.html
@@ -52,21 +52,24 @@
 					</svg>
 					<div class="ct-chart ct-perfect-fourth">
 					</div>
-					<div id="tooltip"></div>
+					<div id="tooltip"></div>					
+				</div>
+				<div class="top-left-block-footer">
+						<div class="Tl"><p>Tl</p></div>
+						<div class="Euro"><p>Euro</p></div>
+						<div class="Usd"><p>Usd</p></div>
 				</div>
 			</div>
 			<div class="bottom-left-block">
-				<div class="title">
-					<p>Loan Calculator</p>
+				<div class="bottom-left-block-head">
+						<p>Loan Calculator</p>					
+					<ul id="tabs">
+						<li><a id="tab1" class="active">Consumer Loan</a></li>
+						<li><a id="tab2">Auto Loan</a></li>
+						<li><a id="tab3">Mortgage</a></li>				
+					</ul>
 				</div>
-				<ul id="tabs">
-					<li><a id="tab1" class="active">test1</a></li>
-					<li><a id="tab2">test2</a></li>
-					<li><a id="tab3">test3</a></li>
-					<li><a id="tab4">test4</a></li>
-				</ul>
-				<!--<div class="container" id="tab1C">1Some content</div>--><!-- <=== было так-->
-				<!-- стало такж: -->
+				<!-- ===================tabs====================== -->
 				<div class="container" id="tab1C">
 					<div class="input-block">
 						<div class="loan-block">
@@ -107,7 +110,7 @@
 		</div>
 		<div class="block-center">
 			<div class="top-center-block">
-				<div class="top-center-block-head">Credit Cards</div>
+				<div class="top-center-block-head"><p>Credit Cards</p></div>
 				<div class="slider">
 					<div class="slide"></div>
 					<div class="slide"></div>
@@ -118,11 +121,19 @@
 					<p>lorem 2</p>
 					<p>lorem 3</p>
 				</div>
+				<div class="two-btn">
+					<div class="btn-left">
+						<button><a href="#" class="wsbutton"><p>Pay the Debt</p></a></button>
+					</div>
+					<div class="btn-right">
+						<button><a href="#" class="wsbutton"><p>Activity</p></a></button>
+					</div>
+				</div>
 			</div>
 			<div class="bottom-center-block">
-				<div class="s-block1"><p>send</p></div>
-				<div class="s-block2"><p>send</p></div>
-				<div class="s-block3"><p>send</p></div>
+				<div class="send-block1"><p>send</p></div>
+				<div class="send-block2"><p>send</p></div>
+				<div class="send-block3"><p>send</p></div>
 			</div>
 		</div>
 		<div class="block-right">
