--- a/index.html
+++ b/index.html
@@ -1,155 +1,180 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css">
-	<link rel="stylesheet" href="http://cdn.jsdelivr.net/chartist.js/latest/chartist.min.css">
-	<link rel="stylesheet" href="http://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
-	<link rel="stylesheet" href="css/style.css">
-	<title>Atalan</title>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css">
+    <link rel="stylesheet" href="http://cdn.jsdelivr.net/chartist.js/latest/chartist.min.css">
+    <link rel="stylesheet" href="http://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
+    <link rel="stylesheet" href="css/style.css">
+    <title>Atalan</title>
 </head>
 <body>
 <div class="wrapper">
-	<div class="header">
-		<div class="triangles"><p>Logo</p>
-		</div>
-		<div class="search-box"><p>search</p>
-		</div>
-		<div class="header-menu">
-			<ul>
-				<li><a href="#" class="btn">Dashboard</a></li>
-				<li><a href="#" class="btn">Transfers</a></li>
-				<li><a href="#" class="btn">Payments</a></li>
-				<li><a href="#" class="btn">Recent Transactions</a></li>
-				<li><a href="#" class="btn">Loan</a></li>
-				<li><a href="#" class="btn">Online Support</a></li>
-			</ul>
-		</div>
-		<div class="photo-name">
-			<img src="" alt="">
-			<p>Ertugrul Cevahir</p>
-		</div>
-	</div>
-	<div class="three-blocks">
-		<div class="block-left">
-			<div class="top-left-block">
-				<div class="top-left-block-head">
-					<p>Balance</p>
-					<ul id="tabs-chart">
-						<li><a class="active">TL</a></li>
-						<li><a>EURO</a></li>
-						<li><a>USD</a></li>
-					</ul>
-				</div>
-				<div class="chart">
-					<svg viewbox="0 0 0 0" style="height:0; width: 0;">
-						<defs>
-							<linearGradient id="gradient-a" x2="0%" y2="100%">
-								<stop offset="0%" stop-color="#6591F9" />
-								<stop offset="100%" stop-color="#531DAB" />
-							</linearGradient>
-						</defs>
-					</svg>
-					<div class="ct-chart ct-perfect-fourth">
-					</div>
-					<div id="tooltip"></div>					
-				</div>
-				<div class="top-left-block-footer">
-						<div class="Tl"><p>Tl</p></div>
-						<div class="Euro"><p>Euro</p></div>
-						<div class="Usd"><p>Usd</p></div>
-				</div>
-			</div>
-			<div class="bottom-left-block">
-				<div class="bottom-left-block-head">
-						<p>Loan Calculator</p>					
-					<ul id="tabs">
-						<li><a id="tab1" class="active">Consumer Loan</a></li>
-						<li><a id="tab2">Auto Loan</a></li>
-						<li><a id="tab3">Mortgage</a></li>				
-					</ul>
-				</div>
-				<!-- ===================tabs====================== -->
-				<div class="container" id="tab1C">
-					<div class="input-block">
-						<div class="loan-block">
-							<label for="">loan Amount</label>
-							<input type="text">
-							<input type="range" min="0" max="10" step="1">
-						</div>
-						<div class="term-block">
-							<label for="">Term</label>
-							<input type="text">
-							<input type="range" min="0" max="10" step="1">
-						</div>
-						<div class="amount-block">
-							<label for="">Installment Amount</label>
-							<input type="text">
-							<input type="range" min="0" max="10" step="1">
-						</div>
-					</div>
-					<div class="output-block">
-						<div class="output-elem">
-							<div class="label">flate</div>
-							<div class="value">1,55%</div>
-						</div>
-						<div class="output-elem">
-							<div class="label">Total</div>
-							<div class="value">608</div>
-						</div>
-						<div class="output-elem">
-							<div class="label">payback</div>
-							<div class="value">150000</div>
-						</div>
-					</div>
-				</div>
-				<div class="container" id="tab2C">2Some content</div>
-				<div class="container" id="tab3C">3Some content</div>
-				<div class="container" id="tab4C">4Some content</div>
-			</div>
-		</div>
-		<div class="block-center">
-			<div class="top-center-block">
-				<div class="top-center-block-head"><p>Credit Cards</p></div>
-				<div class="slider">
-					<div class="slide"></div>
-					<div class="slide"></div>
-					<div class="slide"></div>
-				</div>
-				<div class="slide-title">
-					<p>lorem 1</p>
-					<p>lorem 2</p>
-					<p>lorem 3</p>
-				</div>
-				<div class="two-btn">
-					<div class="btn-left">
-						<button><a href="#" class="wsbutton"><p>Pay the Debt</p></a></button>
-					</div>
-					<div class="btn-right">
-						<button><a href="#" class="wsbutton"><p>Activity</p></a></button>
-					</div>
-				</div>
-			</div>
-			<div class="bottom-center-block">
-				<div class="send-block1"><p>send</p></div>
-				<div class="send-block2"><p>send</p></div>
-				<div class="send-block3"><p>send</p></div>
-			</div>
-		</div>
-		<div class="block-right">
-			<div class="top-right-block">
-				<p>Recurrring Payments</p>
-			</div>
-			<div class="bottom-right-block">
-				<p>Recent Transactions</p>
-			</div>
-		</div>
-	</div>
-	<!-- <div class="footer"></div> -->
+    <div class="header">
+        <div class="triangles"><p>Logo</p>
+        </div>
+        <div class="search-box"><p>search</p>
+        </div>
+        <div class="header-menu">
+            <ul>
+                <li><a href="#" class="btn">Dashboard</a></li>
+                <li><a href="#" class="btn">Transfers</a></li>
+                <li><a href="#" class="btn">Payments</a></li>
+                <li><a href="#" class="btn">Recent Transactions</a></li>
+                <li><a href="#" class="btn">Loan</a></li>
+                <li><a href="#" class="btn">Online Support</a></li>
+            </ul>
+        </div>
+        <div class="photo-name">
+            <img src="img/cat-circle.png" alt="">
+            <p>Ertugrul Cevahir</p>
+        </div>
+    </div>
+    <div class="three-blocks">
+        <div class="block-left">
+            <div class="top-left-block">
+                <div class="top-left-block-head">
+                    <p>Balance</p>
+                    <ul id="tabs-chart">
+                        <li><a class="active">TL</a></li>
+                        <li><a>EURO</a></li>
+                        <li><a>USD</a></li>
+                    </ul>
+                </div>
+                <div class="chart">
+                    <svg viewbox="0 0 0 0" style="height:0; width: 0;">
+                        <defs>
+                            <linearGradient id="gradient-a" x2="0%" y2="100%">
+                                <stop offset="0%" stop-color="#6591F9"/>
+                                <stop offset="100%" stop-color="#531DAB"/>
+                            </linearGradient>
+                        </defs>
+                    </svg>
+                    <div class="ct-chart ct-perfect-fourth">
+                    </div>
+                    <div id="tooltip"></div>
+                </div>
+                <div class="top-left-block-footer">
+                        <div class="TL"><p>TL</p></div>
+                        <div class="Euro"><p>Euro</p></div>
+                        <div class="Usd"><p>Usd</p></div>
+                </div>
+            </div>
+            <div class="bottom-left-block">
+                <div class="bottom-left-block-head">
+                    <div class="title">
+                        <p>Loan Calculator</p>
+                    </div>            
+                        <ul id="tabs">
+                            <li><a id="tab1" class="active">Consumer Loan</a></li>
+                            <li><a id="tab2">Auto Loan</a></li>
+                            <li><a id="tab3">Mortgage</a></li>  
+                        </ul>                   
+                </div>
+                <!--<div class="container" id="tab1C">1Some content</div>--><!-- <=== было так-->
+                <!-- стало такж: -->
+                <div class="container" id="tab1C">
+                    <div class="container-content">
+                        <div class="input-block">
+                            <div class="loan-block">
+                                <label>loan Amount</label>
+                                <input type="text">
+                                <input type="range" min="0" max="10" step="1">
+                            </div>
+                            <div class="term-block">
+                                <label>Term</label>
+                                <input type="text">
+                                <input type="range" min="0" max="10" step="1">
+                            </div>
+                            <div class="amount-block">
+                                <label>Installment Amount</label>
+                                <input type="text">
+                                <input type="range" min="0" max="10" step="1">
+                            </div>
+                        </div>
+                        <div class="output-block">
+                            <div class="output-elem">
+                                <div class="label">flate</div>
+                                <div class="value">1,55%</div>
+                            </div>
+                            <div class="output-elem">
+                                <div class="label">Total</div>
+                                <div class="value">608</div>
+                            </div>
+                            <div class="output-elem">
+                                <div class="label">payback</div>
+                                <div class="value">150000</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="container" id="tab2C">
+                    <div class="container-content">
+                        2Some content
+                    </div>
+                </div>
+                <div class="container" id="tab3C">
+                    <div class="container-content">
+                        3Some content
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="block-center">
+            <div class="top-center-block">
+                <div class="top-center-block-head"><p>Credit Cards</p></div>
+                <div class="slider">
+                    <div class="slide"></div>
+                    <div class="slide"></div>
+                    <div class="slide"></div>
+                </div>
+                <div class="slide-title">
+                    <p>Maximum Card</p>
+                    <p>Maximum Card</p>
+                    <p>Maximum Card</p>
+                </div>
+                <div class="current-debt">
+                    <p>Current Debt 1.400,00 TL</p>
+                </div>
+                <div class="credit-available"> 
+                    <p>Credit Available 8.500,00 TL</p>
+                </div>
+                <div class="cut-off-date">
+                    <p>Cut off Date 03.05.2017</p>
+                </div>
+                 <div class="two-button">
+                    <button>Pay the Debt</button>
+                    <button>Activity</button>
+                </div>
+            </div>
+            <div class="bottom-center-block">
+                <div class="s-block">
+                    <img src="img/cat-circle.png" alt="">
+                    <p>send</p>
+
+                </div>
+                <div class="s-block"><p>send</p></div>
+                <div class="s-block"><p>send</p></div>
+            </div>
+           
+        </div>
+        <div class="block-right">
+            <div class="top-right-block">
+                <p>Recurrring Payments</p>
+            </div>
+            <div class="bottom-right-block">
+                <p>Recent Transactions</p>
+            </div>
+        </div>
+    </div>
+    <!-- <div class="footer"></div> -->
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 <script src="http://cdn.jsdelivr.net/chartist.js/latest/chartist.min.js"></script>
 <script type="text/javascript" src="http://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-<script src="main.js"></script>
+<script src="js/customSlider.js"></script>
+<script src="js/customChart.js"></script>
+<script src="js/customTab.js"></script>
+<script src="js/main.js"></script>
 </body>
 </html>
