--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
         </div>
         <div class="header-menu">
             <ul>
-                <li><a href="#" class="btn">Dashboard</a></li>
                 <li><a href="#" class="btn">Transfers</a></li>
                 <li><a href="#" class="btn">Payments</a></li>
                 <li><a href="#" class="btn">Recent Transactions</a></li>
@@ -134,29 +133,82 @@
                     <p>Maximum Card</p>
                 </div>
                 <div class="current-debt">
-                    <p>Current Debt 1.400,00 TL</p>
+                    <div class="current-debt-name">
+                        <p>Current Debt </p>                        
+                    </div>
+                    <div class="current-debt-sum">
+                        <p>1.400,00 TL</p>
+                    </div>
                 </div>
                 <div class="credit-available"> 
-                    <p>Credit Available 8.500,00 TL</p>
+                    <div class="credit-available-name">
+                        <p>Credit Available</p>
+                    </div>
+                    <div class="current-debt-sum">
+                        <p>8.500,00 TL</p>
+                    </div>
                 </div>
-                <div class="cut-off-date">
-                    <p>Cut off Date 03.05.2017</p>
+                <div class="cut-off-date-block">
+                    <div class="cut-off-date-name">
+                        <p>Cut off Date</p>                        
+                    </div>
+                    <div class="cut-off-date">
+                        <p>03.05.2017</p>                        
+                    </div>
                 </div>
-                 <div class="two-button">
-                    <button>Pay the Debt</button>
-                    <button>Activity</button>
+                 <div class="two-buttons">
+                    <div class="btn-left">
+                        <button>Pay the Debt</button>
+                    </div>
+                    <div class="btn-right">
+                        <button>Activity</button>
+                    </div>
                 </div>
             </div>
             <div class="bottom-center-block">
                 <div class="s-block">
-                    <img src="img/cat-circle.png" alt="">
-                    <p>send</p>
-
+                    <div class="img">
+                        <img src="img/cat-circle.png" alt="">                        
+                    </div>
+                    <div class="name">
+                        <p>Alper<br>Tornaci</p>
+                    </div>
+                    <div class="tl-block">
+                        <p>00.00 TL</p>
+                    </div>
+                    <div class="send-block">
+                        <p>Send</p>                        
+                    </div>
                 </div>
-                <div class="s-block"><p>send</p></div>
-                <div class="s-block"><p>send</p></div>
-            </div>
-           
+                <div class="s-block">
+                     <div class="img">
+                        <img src="img/cat-circle.png" alt="">                        
+                    </div>
+                    <div class="name">
+                        <p>Tugrul<br>Kucukmustafa</p>
+                    </div>
+                    <div class="tl-block">
+                        <p>00.00 TL</p>
+                    </div>
+                    <div class="send-block">
+                        <p>Send</p>                        
+                    </div>
+                </div>
+                <div class="s-block">
+                     <div class="img">
+                        <img src="img/cat-circle.png" alt="">                        
+                    </div>
+                    <div class="name">
+                        <p>Salim<br>Tornaci</p>
+                    </div>
+                    <div class="tl-block">
+                        <p>00.00 TL</p>
+                    </div>
+                    <div class="send-block">
+                        <p>Send</p>                        
+                    </div>
+                </div>
+            </div>          
         </div>
         <div class="block-right">
             <div class="top-right-block">
