up to date layout

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
          <div class="search-box">
                 <div class="container-2">
                     <span class="icon"><i class="fa fa-search"></i></span>
-                    <input type="search" id="search" placeholder="Search Payments Transfers Transactions" />
+                    <input type="search" id="search" placeholder="Search Payments Transfers Transactions..." />
                 </div>
             </div>
         <div class="header-menu">
@@ -34,10 +34,10 @@
             <img src="img/cat-circle.png" alt="">
             <form action="formdata" method="post" name="form1">
              <p><select name="list1">
-              <option value="4" selected>Ertugrul Cevahir</option>
-              <option value="1">Ertugrul Cevahir</option>
+              <option value="1"selected>Ertugrul Cevahir</option>
               <option value="2">Cevahir Ertugrul</option>
               <option value="3">Sapuf Cevahir</option>
+              <option value="4">Ertugrul Cevahir</option>
               <option value="5">Ertugrul Takis</option>
              </select></p>
             </form>
@@ -111,16 +111,24 @@
                         </div>
                         <div class="output-block">
                             <div class="output-elem">
-                                <div class="label">flate</div>
+                                <div class="label">Flate</div>
                                 <div class="value">1,55%</div>
                             </div>
                             <div class="output-elem">
-                                <div class="label">Total</div>
-                                <div class="value">608</div>
+                                <div class="label">Total Cost</div>
+                                <div class="value">608,00 TL</div>
                             </div>
                             <div class="output-elem">
-                                <div class="label">payback</div>
-                                <div class="value">150000</div>
+                                <div class="label">Payback</div>
+                                <div class="value">150.000,00 TL</div>
+                            </div>
+                             <div class="plan-and-button">
+                                <div class="payment-plan">
+                                    <a href="#" class="plan-button">Payment Plan</a>
+                                </div>
+                                <div class="btn-resort">
+                                    <a href="#" class="resort-button">Resort</a>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -174,7 +182,7 @@
                         <p>03.05.2017</p>                        
                     </div>
                 </div>
-                 <div class="two-buttons">
+                <div class="two-buttons">
                     <div class="btn-left">
                         <a href="#" class="L-button">Pay the Debt</a>
                     </div>
@@ -230,16 +238,29 @@
         </div>
         <div class="block-right">
             <div class="top-right-block">
-                <p>Recurrring Payments</p>
-                <img src="img/fade-freetoedit-bg.png" alt="">
+                <div class="name-of-block">
+                    <p>Recurrring Payments</p>                    
+                </div>
+                <div class="circle-img-text">
+                    <img src="img/fade-freetoedit-bg.png" alt="">
+                    <div class="text-bill">
+                        <h4>Utility Bill</h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, minima.</p>
+                        <h3>186,00 TL</h3>
+                    </div>
+                </div>
             </div>
             <div class="bottom-right-block">
-                <p>Recent Transactions</p>
+                <div class="name-of-block">
+                    <p>Recent Transactions</p>
+                </div>
                 <img src="img/Pink-gradient-3.png" alt="">
             </div>
         </div>
     </div>
-    <!-- <div class="footer"></div> -->
+    <div class="footer">
+        <p>connecting to financial index...</p>
+    </div>
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 <script src="http://cdn.jsdelivr.net/chartist.js/latest/chartist.min.js"></script>
