--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
             <p>Logo</p>
         </div>
          <div class="search-box">
-                <div class="container-2">
-                    <span class="icon"><i class="fa fa-search"></i></span>
-                    <input type="search" id="search" placeholder="Search Payments Transfers Transactions..." />
-                </div>
+            <div class="container-2">
+                <span class="icon"><i class="fa fa-search"></i></span>
+                <input type="search" id="search-box" placeholder="Search Payments Transfers Transactions..." />
+            </div>
             </div>
         <div class="header-menu">
             <ul>
@@ -32,8 +32,8 @@
         </div>
         <div class="photo-name">
             <img src="img/cat-circle.png" alt="">
-            <form action="formdata" method="post" name="form1">
-             <p><select name="list1">
+            <form  action="formdata" method="post" name="form1">
+             <p><select style="border-color: rgb(56, 53, 53);color: white;background: #383535">
               <option value="1"selected>Ertugrul Cevahir</option>
               <option value="2">Cevahir Ertugrul</option>
               <option value="3">Sapuf Cevahir</option>
@@ -242,11 +242,33 @@
                     <p>Recurrring Payments</p>                    
                 </div>
                 <div class="circle-img-text">
-                    <img src="img/fade-freetoedit-bg.png" alt="">
-                    <div class="text-bill">
-                        <h4>Utility Bill</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, minima.</p>
-                        <h3>186,00 TL</h3>
+                    <div class="img-text">
+                        <p>08<br>May</p>
+                    </div>                    
+                    <div class="text-block">
+                        <h6>Starbucks</h6>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                        <h5>186,00 TL</h5>
+                    </div>
+                </div>
+                <div class="circle-img-text">
+                    <div class="img-text">
+                        <p>22<br>May</p>
+                    </div>                    
+                    <div class="text-block">
+                        <h6>Utility Bill</h6>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                        <h5>2.800,00 TL</h5>
+                    </div>
+                </div>
+                <div class="circle-img-text">
+                    <div class="img-text">
+                        <p>01<br>Jun</p>
+                    </div>                    
+                    <div class="text-block">
+                        <h6>Utility Bill</h6>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                        <h5>70,00 TL</h5>
                     </div>
                 </div>
             </div>
@@ -254,7 +276,35 @@
                 <div class="name-of-block">
                     <p>Recent Transactions</p>
                 </div>
-                <img src="img/Pink-gradient-3.png" alt="">
+                <div class="circle-img-text2">
+                    <div class="img-text2">
+                        <p>Today</p>
+                    </div>                    
+                    <div class="text-block2">
+                        <h6>Starbucks</h6>
+                        <h5>12,00 TL</h5>
+                    </div>
+                </div>
+                <div class="circle-img-text2">
+                    <div class="img-text2">
+                        <p>30<br>Apr</p>
+                    </div>                    
+                    <div class="text-block2">
+                        <h6>CarrefourSA</h6>
+                        <h5>324,78 TL</h5>
+                    </div>
+                </div>
+                <div class="circle-img-text2">
+                    <div class="img-text2">
+                        <p>29<br>Apr</p>
+                    </div>                    
+                    <div class="text-block2">
+                        <h6>CarrefourSA</h6>
+                        <h5>324,78 TL</h5>
+                    </div>
+                </div>
+
+                <!-- <img src="img/Pink-gradient-3.png" alt=""> -->
             </div>
         </div>
     </div>
